2014-12-15  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* net/shr.el (shr-fold-text): Don't bug out on zero-length text.

2014-12-14  Alan Mackenzie  <acm@muc.de>

	* lisp/cus-start.el (all): Add fast-but-imprecise-scrolling.

2014-12-14  Artur Malabarba  <bruce.connor.am@gmail.com>

	* let-alist.el: Add lexical binding.

2014-12-14  Steve Purcell  <steve@sanityinc.com>  (tiny change)

	* emacs-lisp/package.el (package-menu-mode): Use an extra column
	for the "Version" column, to accomodate date-and-time-based
	versions.

2014-12-14  Cameron Desautels  <camdez@gmail.com>

	* cus-edit.el (custom-unsaved-options): New function, extracted
	from `customize-unsaved'.
	(custom-unsaved): Use it.
	(custom-prompt-customize-unsaved-options): New function.
	(Bug#19328)

2014-12-14  Dmitry Gutov  <dgutov@yandex.ru>

	* fringe.el (fringe-bitmap-p): Fix 2014-12-05 breakage.

2014-12-14  Dmitry Gutov  <dgutov@yandex.ru>

	Move ASYNC argument to the `diff' VC command to the fifth
	position, for better compatibility with existing third-party code,
	and document it.

	* vc/vc.el (vc-diff-internal): Pass `async' argument to the
	backend `diff' command in the last position.

	* vc/vc-svn.el (vc-svn-diff):
	* vc/vc-src.el (vc-src-diff):
	* vc/vc-sccs.el (vc-sccs-diff):
	* vc/vc-rcs.el (vc-rcs-diff):
	* vc/vc-mtn.el (vc-mtn-diff):
	* vc/vc-hg.el (vc-hg-diff):
	* vc/vc-git.el (vc-git-diff):
	* vc/vc-dav.el (vc-dav-diff):
	* vc/vc-cvs.el (vc-cvs-diff):
	* vc/vc-bzr.el (vc-bzr-diff):
	* obsolete/vc-arch.el (vc-arch-diff): Move ASYNC argument to the end.

2014-12-13  Andreas Schwab  <schwab@linux-m68k.org>

	* net/shr.el (shr-next-link): Don't error out at eob.

2014-12-05  Nicolas Richard  <theonewiththeevillook@yahoo.fr>

	* isearch.el (isearch-open-necessary-overlays): Open overlay
	ending at point (bug#19333).

2014-12-13  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* net/shr.el (shr-fold-text): New function.
	(shr-show-alt-text, shr-urlify, shr-tag-img): Use it to fold long